bug#44695  ALTER TABLE during START BACKUP crashes mysqld: Informing mysqld properly about encountered errors